--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,10 @@ pyaudioclassification==0.1.9
 matplotlib==3.0.2
 tensorflow==1.12.0
 pandas==0.23.4
+scikit-learn==0.20.2
+numpy==1.15.4
+scipy==1.2.0
+hmmlearn==0.2.1
+simplejson==3.16.0
+eyeD3==0.8.8
+pydub==0.23.0
